// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package iam.am;

option go_package = "openpitrix.io/iam/pkg/pb/am;pbam";

// ----------------------------------------------------------------------------
// The Pattern Syntax
// ----------------------------------------------------------------------------

// The pattern syntax is:
//
//	pattern:
//	{ term }
//	term:
//		'*'         matches any sequence of non-Separator characters
//		'**'        matches any sequence of characters, include path separators.
//		'?'         matches any single non-Separator character
//		'[' [ '^' ] { character-range } ']'
//		            character class (must be non-empty)
//		c           matches character c (c != '*', '?', '\\', '[')
//		'\\' c      matches character c
//
//	character-range:
//		c           matches character c (c != '\\', '-', ']')
//		'\\' c      matches character c
//		lo '-' hi   matches character c for lo <= c <= hi
//
// See https://godoc.org/path/filepath#Match
// See https://github.com/bmatcuk/doublestar
//
// Examples: https://golang.org/src/path/filepath/match_test.go

// ----------------------------------------------------------------------------
// basic type
// ----------------------------------------------------------------------------

message Action {
	// 1. check any of role can do the action
	// 2. mappng xid to the roles, then check any role can do the action

	repeated string role_name = 1;
	repeated string xid = 2; // user_id/group_id/*_id

	string verb = 3; // op1/op2/...
	string path = 4; // url
}

message Rule {
	string path = 1;          // See Pattern Syntax
	repeated string verb = 2; // See Pattern Syntax
}

message Role {
	string role_name = 1; // primary key, read only
	string parent_role_name = 2;
	repeated string child_role_name = 3;

	repeated Rule rule = 4;
}
message RoleList {
	repeated Role value = 1;
}

message RoleBinding {
	string role_name = 1;
	string xid = 2;
}
message RoleBindingList {
	string role_name = 1;
	string xid = 2;
}

// ----------------------------------------------------------------------------
// service api
// ----------------------------------------------------------------------------

service AccessManager {
	rpc CreateRole(Role) returns (Role);
	rpc ModifyRole(Role) returns (Role);
	rpc DeleteRoleByName(String) returns (Bool);

	rpc GetRoleByRoleName(String) returns (Role);
	rpc GetRoleByUserId(UserId) returns (RoleList);
	rpc ListRoles(Range) returns (ListRolesResponse);

	rpc CreateRoleBinding(RoleBindingList) returns (Bool);
	rpc DeleteRoleBinding(RoleBindingList) returns (Bool);
	rpc DeleteAllRoleBindings(UserId) returns (Bool);

	// check any of xid or role_name can do the action
	rpc CanDo(Action) returns (Bool);
}

// ----------------------------------------------------------------------------
// service api type
// ----------------------------------------------------------------------------

message Bool {
	bool value = 1;
}
message String {
	string value = 1;
}

message UserId {
	string value = 1;
}

message Range {
	string role_name_regexp = 1;
	int32 offset = 2;
	int32 limit = 3;
}

message ListRolesResponse {
	repeated Role role = 1;
	int32 total = 2;
}

// ----------------------------------------------------------------------------
// END
// ----------------------------------------------------------------------------
